<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BasketballScount</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_tournament">TournamentActivity</string>
    <string name="title_activity_match">MatchActivity</string>
    <string name="label_next">Next</string>
    <string name="title_activity_competitor_choosing">CompetitorChoosingActivity</string>
    <string name="team_a">Team A</string>
    <string name="team_b">Team B</string>
    <string name="title_activity_school_list">SchoolListActivity</string>
    <string name="title_activity_player_choosing">PlayerChoosingActivity</string>
    <string name="title_activity_manage_school_info">ManageSchoolInfoActivity</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="title_activity_tournament_history">TournamentHistoryActivity</string>
    <string name="title_activity_match_history">MatchHistoryActivity</string>
    <string name="tournament_name">Tournament Name</string>
    <string name="number_of_matches">Number of Matches</string>
    <string name="match_number">Match Number</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="place">Place</string>
    <string name="referee_name">Referee Name</string>
    <string name="umpire_name">Umpire Name</string>
    <string name="title_activity_quater_choosing">QuaterChoosingActivity</string>
    <string name="title_activity_quater_menu">QuaterMenuActivity</string>

    <string name="ok">ตกลง</string>
    <string name="cancel">ยกเลิก</string>

    <!--ManageSchoolInfoActivity-->
    <string name="edit_school_name">แก้ไขชื่อโรงเรียน</string>
    <string name="delete_school_name">ลบชื่อโรงเรียน</string>
    <string name="manage_players">แก้ไขรายชื่อผู้เล่น</string>

    <!--PlayerChoosingActivity-->
    <string name="add_new_player_name">เพิ่มผู้เล่น</string>
    <string name="add_new_player_number">ป้อนหมายเลขผู้เล่น</string>
    <string name="title_activity_match_recording">MatchRecordingActivity</string>
    <string name="title_activity_summary_quarter">SummaryQuarterActivity</string>

</resources>
