<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="porcomsci.basketballscout.com.basketballscount.mainflow.TournamentActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_next"
        android:id="@+id/button_next"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tournament_name"
        android:id="@+id/tournament_tournament_name_label"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tournament_tournament_name_editText"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/tournament_tournament_name_label"
        android:layout_alignLeft="@id/tournament_tournament_name_label"
        android:layout_alignStart="@id/tournament_tournament_name_label" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_of_matches"
        android:id="@+id/tournament_number_of_matches_label"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/tournament_tournament_name_editText"
        android:layout_alignLeft="@id/tournament_tournament_name_label"
        android:layout_alignStart="@id/tournament_tournament_name_label" />

    <EditText
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/tournament_number_of_matches_editText"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/tournament_number_of_matches_label"
        android:layout_alignLeft="@id/tournament_tournament_name_label"
        android:layout_alignStart="@id/tournament_tournament_name_label" />

</RelativeLayout>
